# c-cpp-studying

./: README.md  compile_linux.txt  mykmp.c  qsort.h  temp.c  高精度计算器.c  高精度计算器2.0.c
bianyiqi/: SAMPLE语言定义.doc  cifa.cpp  cifa.h  function.cpp  function.h  main.cpp  mubiao.cpp  mubiao.h  siyuan.cpp  siyuan.h  yuchuli.cpp  yuchuli.h  yufa.cpp  yufa.h
compile_linux/: base_gcc  compile_linux.txt  config-6.1.0  gcc  generic_safe
dblp_manager/: README.txt
dblp_manager/source_files/: CMakeLists.txt  d_author.cpp  d_author.h  d_author.ui  d_author_list.cpp  d_author_list.h  d_author_list.ui  d_essay.cpp  d_essay.h  d_essay.ui  d_essay_list.cpp  d_essay_list.h  d_essay_list.ui  d_init.cpp  d_init.h  d_init.ui  d_search_author.cpp  d_search_author.h  d_search_author.ui  d_search_essay.cpp  d_search_essay.h  d_search_essay.ui  hash.h  init.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  my_data_struct.cpp  my_data_struct.h  my_error.h  qobject_init.h  search.h  split.h  type_to_str.h
init/: aarch64-g++-me.sh  aarch64_qemu.txt  amd init.txt  clang++-me.sh  core.c  g++-me.sh  gcc-me.sh  init.sh  init_debian.sh  io.txt  kernel_qemu.txt  killamd.bat  tar_static_arm64  termux_ubuntu.txt  ubuntu_22_10.txt  ubuntu_23_04.txt  wezterm.lua  wsl.txt  显卡驱动.txt
init/compiler/: aarch64-clang++-me  aarch64-clang-me  aarch64-g++-me  aarch64-gcc-me  arm-clang++-me  arm-clang-me  arm-g++-me  arm-gcc-me  armhf-clang++-me  armhf-clang-me  armhf-g++-me  armhf-gcc-me  clang++-me  clang++-option  clang-me  clang-option  g++-me  g++-option  gcc-me  gcc-option
posix/: copy.c  fork_exec.c  fork_exec_wait.c  get_env.c  ln_s.c  mv.c  readelf.c  rmdir_p.c  signal_nanosleep.c
pso/: build.sh  dyn_list  f1.c  f10.c  f2.c  f3.c  f4.c  f5.c  f6.c  f7.c  f8.c  f9.c  libme.c  pos_1.c  pos_2.c  pos_3.c  pos_4.c  run.sh
syscall/: my_exit.s  my_write.s
termux/: init.sh  init_debian.sh  init_redhat.sh  termux_fedora.txt  termux_ubuntu.txt
算法/: README.md  其他知识.md  回溯法.md  库.md
